# rdf-engine

./: .gitignore  README.md  pyproject.toml  tasks.py
.github/workflows/: python-publish.yml
engine/: environment.devenv.yml  pyproject.toml  readme.md  test.py
engine/engine/: triples.py
engine/engine/abstract/: abstract.py  triples.py
engine/src/engine/: triples.py
engine/src/engine/abstract/: abstract.py
src/rdf_engine/: __init__.py  canon.py  conversions.py  data.py  engine.py  program.py  rules.py
test/: _.py  nb.py  problem.py  program.yaml  pytest.ini  reification.py  test.py
