[project]
name = "engine"
version = "0.1.0"
description = "Add a short description here"
authors = [
    { name = "Majid alDosari", email = "majid.aldosari@pnnl.gov" },
    { name = "Bilal Faye", email = "bilal.faye@pnnl.gov" }
]
dependencies = [
    "pyoxigraph",]
readme = "README.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true

[tool.hatch.metadata]
allow-direct-references = true