[project]
name = "engine"
version = "0.1.0"
description = "Add a short description here"
authors = [
    { name = "Majid alDosari", email = "majid.aldosari@pnnl.gov" },
]
dependencies = [
    "pyoxigraph",]
readme = "README.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


